# morkato-bot-java

./: .gitignore  build.gradle.kts  docker-compose.yml  gradle.properties  meson.build  morkato.conf-exemple  postgresql.dockerfile  settings.gradle.kts
.monarch/: ids-store.mcisidv1
content/: embeds.yml
gradle/wrapper/: gradle-wrapper.properties
mcbmt/: build.gradle.kts
mcbmt/common/: build.gradle.kts
mcbmt/src/main/java/org/morkato/mcbmt/: Application.java  ApplicationBot.java  ApplicationCommon.java  BotContext.java  BotContextImpl.java  BotCore.java  NoArgs.java  Shutdownable.java
mcisid/: meson.build  pgmcisid--1.0.sql  pgmcisid.control
mcisid-java/: build.gradle.kts
mcisid-java/src/main/java/org/morkato/mcisid/: Mcisid.java  McisidNative.java  Mcisidv1.java  Mcisidv1Generator.java  Mcisidv1Native.java  Mcisidv1Sequence.java  Mcisidv1Snapshot.java  Test.java
mcisid/include/: mcisid-postgres.h  mcisid.h  mcisidv1.h
mcisid/include/mcisid/: mcisid.h  mcisidv1.h
mcisid/jnimcisid/: meson.build
mcisid/jnimcisid/include/: org_morkato_mcisid_McisidNative.h  org_morkato_mcisid_Mcisidv1Native.h
mcisid/jnimcisid/src/: McisidNative.c  Mcisidv1Native.c
mcisid/pgmcisid/: meson.build
mcisid/pgmcisid/src/: pgmcisid.c
mcisid/src/: mcisid-postgres.c  mcisid.c  mcisidv1.c  pgmcisid.c
mcisid/src/common/: mcisid.c  mcisidv1.c
mcisid/src/linux/: mcisidv1.c
mcisid/src/mcisid/: mcisid.c  mcisidv1.c
monarch/: meson.build
monarch/include/monarch/: arts.h  entity_context.h  fields.h  log.h  monarch.h  rpg.h  store.h  uid.h  util.h
monarch/src/common/: entity_context.c  log.c  monarch.c  uid.c
monarch/src/linux/: arts.c  log.c  monarch.c  store.c  uid.c  util.c
monarch/test/: simple-test.c
morkato-api/: build.gradle.kts
morkato-api-database/: build.gradle.kts
morkato-api-database/src/main/kotlin/org/morkato/database/: DatabaseArt.kt  DatabaseProvider.kt  Main.kt
morkato-api-database/src/main/resources/migration/: V5__attacks.sql
morkato-api-database/src/test/resources/: logback-test.xml
morkato-api-tests/: build.gradle.kts
morkato-api/database/: build.gradle.kts
morkato-api/database/src/main/resources/migration/: V1__base-extensions.sql  V2__types.sql  V3__mcrpg.sql  V4__guilds.sql  V5__arts.sql  V6__attacks.sql  V7__abilities.sql  V8__families.sql
morkato-api/database/src/main/resources/queries/guild/: delete-guild-by-id.sql  find-guild-by-id.sql  guild-creation.sql
morkato-api/database/src/main/resources/queries/rpg/: rpg-creation.sql  rpg-delete-by-id.sql  rpg-find-by-id.sql
morkato-api/entity/: build.gradle.kts
morkato-api/src/main/java/org/morkato/api/: ApiConnectionStatement.java  DataBuilder.java  DeleteApiModel.java  Main.java  SnowflakeIdGenerator.java  UpdateApiModel.java
morkato-api/tests/: build.gradle.kts
morkato-boot/: build.gradle.kts
morkato-boot/src/main/java/org/morkato/boot/: ApplicationContext.java  BaseExtension.java  DependenceInjection.java  Extension.java  ExtensionContextFactory.java  ExtensionManager.java
morkato-bot/: build.gradle.kts
morkato-bot-manager/: build.gradle.kts
morkato-bot-manager-starter/: build.gradle.kts
morkato-bot-manager-starter/src/main/java/org/morkato/bmt/: Main.java
morkato-bot-manager/common/: build.gradle.kts
morkato-bot-manager/src/main/java/com/morkato/bmt/: ApplicationContextBuilder.java  BaseExtension.java  BotBuilder.java  BotListener.java  CommandCallback.java  Extension.java  ExtensionContextBuilder.java  ExtensionManager.java  Main.java  MorkatoParser.java  NoArgs.java
morkato-bot-manager/src/main/java/org/morkato/bmt/: Application.java  ApplicationBot.java  ApplicationCommon.java  ApplicationContextBuilder.java  ApplicationRegistries.java  ApplicationStaticRegistries.java  BotBuilder.java  BotContext.java  BotContextFactory.java  BotContextImpl.java  BotCore.java  BotListener.java  CommandRegistry.java  ComponentLoader.java  ComponentLoaderFactory.java  DependenceInjection.java  ExtensionLoader.java  Field.java  LoaderBuilder.java  Main.java  NoArgs.java  Shutdownable.java  SubCommandPayload.java
morkato-bot/src/main/resources/: logback.xml
morkato-http-api/: build.gradle.kts
morkato-http-api/src/main/resources/: application-dev.properties  application-test.properties
morkato-http-api/src/main/resources/db/migration/: V11__wisteria_attacks.sql
morkato-http-client/: build.gradle.kts
morkato-jdbc/: build.gradle.kts
morkato-resolver/: build.gradle.kts
morkato-resolver/src/main/java/morkresolv/: Test.java
morkato-service/: build.gradle.kts
morkato-service/src/main/resources/: application-dev.properties  application.properties
morkato-utils/: build.gradle.kts
(+908 files in other folders)
